--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -8,7 +8,7 @@
 
 
 body, html{
-    background-color: white;
+    
     overflow-x: hidden;
     /* margin-bottom: 60px; */
     margin: 0;
@@ -17,15 +17,15 @@ body, html{
 section{
     padding-top:2px;
 }
-#body {
-    background-image: url('https://chany4.github.io/images.Portfolio/images/Desktop%20-%2020%20(1).png');
+main {
+    background-image: url('https://chany4.github.io/images.Portfolio/images/Desktop%20-%2020.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-    background-color: #f0f0f0; /* Fallback color */
     min-height: 100vh;
     object-fit: contain;
+    background-color: white;
     margin: 0;
     padding: 0;
 }
@@ -39,15 +39,21 @@ section{
     color: white;
     font-weight: bold;
   }
+  #logo{
+    color: white;
+  }
 
   footer{
-    background-color: pink;
-    border: 1px solid white;
+    background-color: white;
+    border-top: 1px solid black;
     margin-top: 10px;
+    color: black;
+    padding: 20px;
   }
   .footer-Para{
     margin: 5px;
     margin-top: 10px;
+    color: black;
   }
   
   #gitPic{
@@ -88,6 +94,10 @@ section{
   font-size: 1,3rem;
   color: white;
   }
+
+  modal-dialog{
+    width: 800px;
+  }
   
   /* Landing Section */
 
@@ -95,16 +105,17 @@ section{
     width: 100%;
     margin-top: 8%;
     margin-bottom: 25%;
-    background-color: white;
+    background-color: pink;
     padding: 20px;
     max-width: max-content;
+    color: white;
 }
   /* About Section */
 
   #about{
     margin-top: 30%;
-    margin-bottom: 20%;
-    background-color: white;
+    background-color: rgba(255, 0, 0, 0.541);
+    color: white;
   }
   #self2{
     width: 80%;
@@ -135,40 +146,93 @@ section{
     padding-top:15px ;
 }
 
+/* skills */
+
+
+
+
+/* Projects */
+
+
+/* Testiomonial Section */
+
+.testimonials .carousel-container .carousel-inner {
+  height: 550px;
+}
+
+.testimonials .carousel-container .carousel-inner img {
+  height: 300px;
+  margin: 0 auto;
+}
+
+.testimonials .carousel-container .carousel-inner .carousel-caption {
+  background-color: green;
+  border-radius: 20px;
+  color: #ff70b5;
+  font-weight: bold;
+  margin: -200px;
+}
+
+
+/* contact me */
+
+.get-in-touch{
+  color: green;
+}
+#contact-section{
+  display: flex;
+  justify-content: center;
+}
+#contact{
+  background-color: pink;
+  width: 700px;
+  padding: 30px;
+}
+label{
+  width: 92%;
+}
+input{
+  width: 100%;
+}
+
+textarea{
+  width: 100%;
+  height: 200px;
+}
   /* Media Queries */
   
 
 /* xs*/
 @media only screen and (max-width: 600px) {
-    #body {
+    main {
         background-size: contain;
     }
 }
 
 /* sm */
 @media only screen and (min-width: 600px) {
-    #body {
+    main {
         background-size: contain;
     }
 }
 
 /* md */
 @media only screen and (min-width: 768px) {
-    #body {
+    main {
         background-size: cover;
     }
 }
 
 /* lg */
 @media only screen and (min-width: 992px) {
-    #body {
+    main {
         background-size: cover;
     }
 }
 
 /*xxl*/
 @media only screen and (min-width: 1200px) {
-    #body {
+    main {
         background-size: contain;
     }
 }
