--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -237,3 +237,14 @@ textarea{
     }
 }
 
+/* 
+Mint green: rgb(152, 255, 152)
+Soft lavender: rgb(230, 230, 250)
+Light teal: rgb(144, 216, 218)
+Pale yellow: rgb(255, 255, 224)
+Sky blue: rgb(135, 206, 235)
+Peach: rgb(255, 218, 185)
+Ivory: rgb(255, 255, 240)
+Soft coral: rgb(240, 128, 128)
+Sage green: rgb(188, 210, 188)
+Light periwinkle: rgb(204, 204, 255) */
